--- a/play.html
+++ b/play.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="shakespeare.css">
         <title>WELCOME TO CSS PAGE</title>
     </head>
     <body>
