added table in play.html

--- a/play.html
+++ b/play.html
@@ -10,9 +10,9 @@
         <h4>Act 1,SCENE I.<span id="act"> A hall in DUKE SOLINUS'S palace.</span></h4>
         <p class="stage-direction">Enter DUKE SOLINUS, AEGEON, Gaoler, Officers, and other Attendants.</p>
         <h5 class="name AEGEON">AEGEON</h5>
-        <p>Proceed, Solinus, to procure my fall
+        <p class="speech">Proceed, Solinus, to procure my fall
         And by the doom of death end woes and all.</p>
-        <h5 class="name DUKE SOLINUS">DUKE SOLINUS</h5>
+        <h5 class="name DUKE">DUKE SOLINUS</h5>
         <p class="speech">Merchant of Syracuse, plead no more;
         I am not partial to infringe our laws:
         The enmity and discord which of late
@@ -39,7 +39,7 @@
         <h5 class="name AEGEON">AEGEON</h5>
         <p class="speech">Yet this my comfort: when your words are done,
         My woes end likewise with the evening sun.</p>
-        <h5 class="name DUKE SOLINUS">DUKE SOLINUS</h5>
+        <h5 class="name DUKE">DUKE SOLINUS</h5>
         <p class="speech">Well, Syracusian, say in brief the cause
         Why thou departed'st from thy native home
         And for what cause thou camest to Ephesus.</p>
@@ -109,7 +109,7 @@
         Of Corinth that, of Epidaurus this:
         But ere they came,--O, let me say no more!
         Gather the sequel by that went before.</p>
-        <h5 class="name SOLINUS">SOLINUS</h5>
+        <h5 class="name DUKE">DUKE SOLINUS</h5>
         <p class="speech">Nay, forward, old man; do not break off so;
         For we may pity, though not pardon thee.</p>
         <h5 class="name AEGEON">AEGEON</h5>
@@ -136,7 +136,7 @@
         Thus have you heard me sever'd from my bliss;
         That by misfortunes was my life prolong'd,
         To tell sad stories of my own mishaps.</p>
-        <h5 class="name DUKE SOLINUS">DUKE SOLINUS</h5>
+        <h5 class="name DUKE">DUKE SOLINUS</h5>
         <p class="speech">And for the sake of them thou sorrowest for,
         Do me the favour to dilate at full
         What hath befall'n of them and thee till now.</p>
@@ -157,5 +157,28 @@
         But here must end the story of my life;
         And happy were I in my timely death,
         Could all my travels warrant me they live.</p>
+        <br>
+        <table border=1>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Offer</th>
+            </tr>
+            <tr>
+                <td>DUKE SOLINUS</td>
+                <td>Capulet</td>
+                <td>1.2millions dollars</td>
+            </tr>
+            <tr>
+                <td>AEGEON</td>
+                <td>Ted Montague</td>
+                <td>1.6millions dollars</td>
+            </tr>
+            <tr>
+                <td>REMEO</td>
+                <td>Anthony</td>
+                <td>2 million dollars</td>
+            </tr>
+        </table>
     </body>
 </html>
