--- a/play.html
+++ b/play.html
@@ -180,5 +180,6 @@
                 <td>2 million dollars</td>
             </tr>
         </table>
+        <a href="play2.html">click here to navigate to the play2.html page</a>
     </body>
 </html>
