adding styles for play2.html

--- a/play2.html
+++ b/play2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link ref="stylesheet" href="shakespeare.css">
+        <link rel="stylesheet" href="shakespeare.css">
         <title>And the play continues</title>
     </head>
     <body>
-    <h4 class="name DUKE">DUKE SOLINUS</h4>
+    <h5 class="name DUKE">DUKE SOLINUS</h5>
     <p class="speech">Hapless AEgeon, whom the fates have mark'd
      To bear the extremity of dire mishap!
      Now, trust me, were it not against our laws,
@@ -22,7 +22,7 @@
      Beg thou, or borrow, to make up the sum,
      And live; if no, then thou art doom'd to die.
      Gaoler, take him to thy custody.</p>
-     <h5 class="name Gaoler">Gaoler</h5>
+     <h5 class="name GAOLER">GAOLER</h5>
      <p class="speech">I will, my lord.</p>
      <h5 class="name AEGEON">AEGEON</h5>
      <p class="speech">Hopeless and helpless doth AEgeon wend,
