changes made in all the files

--- a/play.html
+++ b/play.html
@@ -181,5 +181,10 @@
             </tr>
         </table>
         <a href="play2.html">click here to navigate to the play2.html page</a>
-    </body>
+        <br>
+        <br>
+        <div>
+        <img src ="shakespeare.jpg" alt="Image of shakespeare">
+        </div>>
+</body>
 </html>
