--- a/play2.html
+++ b/play2.html
@@ -28,5 +28,12 @@
      <p class="speech">Hopeless and helpless doth AEgeon wend,
      But to procrastinate his lifeless end.</p>
      <a href="play.html">click here to navigate to the play.html page</a>
+     <br>
+     <br>
+    <ul class="navigate">
+        <li><button type="play2.html" onclick="REPLAY">REPLAY</button></li>
+        <li><button type="play.html" onclick="NEXTPAGE">NEXTPAGE</button></li>
+     </ul>
+     <img src ="shakespeare.jpg" alt="Image of shakespeare">
     </body>
 </html>
