modified all the files

--- a/play.html
+++ b/play.html
@@ -183,8 +183,10 @@
         <a href="play2.html">click here to navigate to the play2.html page</a>
         <br>
         <br>
-        <div>
-        <img src ="shakespeare.jpg" alt="Image of shakespeare">
-        </div>>
+      <img src="abc.jpg" width="400" height="200" alt="Image of shakespeare">
+      <br>
+      <a href="play2.html"><img src="next.png" width="70" height="70"></a>
+      <a href="play.html"><img src="up.png" width="70" height="70"></a>
+      
 </body>
 </html>
