--- a/play2.html
+++ b/play2.html
@@ -30,10 +30,7 @@
      <a href="play.html">click here to navigate to the play.html page</a>
      <br>
      <br>
-    <ul class="navigate">
-        <li><button type="play2.html" onclick="REPLAY">REPLAY</button></li>
-        <li><button type="play.html" onclick="NEXTPAGE">NEXTPAGE</button></li>
-     </ul>
-     <img src ="shakespeare.jpg" alt="Image of shakespeare">
+     <a href="play2.html"><image src="up.png" width="70" height="70"></a>
+     <a href="play.html"><image src="previous.png" width="70" height="70"></a>
     </body>
 </html>
